<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">志刚笔记</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text">文字</string>
    <string name="photo">图片</string>
    <string name="video">视频</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="target_string"><b>标题</b></string>
    <string name="et_title">无标题笔记</string>
    <string name="content">我要记的事情</string>
    <string name="title">标题</string>
    <string name="time">时间</string>
    <string name="mynotes">我的笔记</string>
    <string name="search">搜索</string>
    <string name="delete">删除</string>
    <string name="startcancle">取消</string>
    <string name="detailsave">保存</string>
    <string name="detailback">返回</string>
    <string name="detaildelete">删除</string>
    <string name="detailtitle">无标题笔记</string>
    <string name="detailtext">我要记的事情</string>

</resources>
