<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/list_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text"
            android:textColor="#BEBEBE"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/photoandvideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/list_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <ImageView
                android:id="@+id/list_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/list_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photoandvideo"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/time"
            android:textColor="#BEBEBE"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/list_ck_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/list_time"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:focusable="false"
            android:focusableInTouchMode="false" 
            android:visibility="gone"
            />
    </RelativeLayout>

</RelativeLayout>