<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wzg.multinotes.activity.MainActivity" >

    <RelativeLayout
        android:id="@+id/toop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4169E1" >

        <TextView 
            android:id="@+id/tv_showlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColor="#ffffff"
            android:textSize="15sp"
            />
        <TextView 
            android:id="@+id/btn_createnote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:gravity="center"
            android:text="+"
            android:textColor="#ffffff"
            android:textSize="35dp"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/mynotes"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toop"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/fangdajing" />

        <AutoCompleteTextView
            android:id="@+id/sousuo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/iv_photo"
            android:background="@drawable/dise1"
            android:completionThreshold="1"
            android:gravity="left|center"
            android:hint="@string/search"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ooo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
    </LinearLayout>

    <FrameLayout
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ooo"
        android:layout_below="@+id/top" >

        <ListView
            android:id="@+id/lv_shownotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            
            >
        </ListView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#9c9c9c"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_start_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#e8e8e8"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_start_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#e8e8e8"
            android:text="@string/startcancle" />
    </LinearLayout>

</RelativeLayout>