<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4169E1" >

        <TextView
            android:id="@+id/tv_dt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/detailsave"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/detailback"
            android:textColor="#ffffff"
            android:textSize="20dp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:background="@null"
        android:hint="@string/detailtitle" />
  
    <View
        android:id="@+id/view_detail"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="#4169E1" />

     <ImageView 
        android:id="@+id/img_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"  
        android:visibility="gone"     
        />
    
    <VideoView
        android:id="@+id/video_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />
    <EditText
        android:id="@+id/et_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/detailtext" />
    
    <RelativeLayout
        android:id="@+id/relative_detail_containrecord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/video_detail"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/record_bg" 
        android:visibility="gone"
        >

        <ImageView 
            android:id="@+id/img_detail_recorded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
       
        <TextView
            android:id="@+id/tv_detail_voicesaved_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="录音文本"
            android:textColor="#000000" />
         <ImageView
            android:id="@+id/img_detail_rightlogo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:src="@drawable/png_common_enter" />
    </RelativeLayout>

    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFAFA"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/photos" />

        <ImageView
            android:id="@+id/iv_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/camera" />

        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/video" />

        <ImageView
            android:id="@+id/iv_voice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/luyin" />
          <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="…" 
            android:textSize="20dp"
                      />
        
    </LinearLayout>

</LinearLayout>