<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#4169E1" >

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancle"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/relative_top"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:background="@null"
        android:hint="@string/et_title" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/et_title"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="#4169E1" />

    <ImageView
        android:id="@+id/img_saved"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/view"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <VideoView
        android:id="@+id/video_saved"
        android:layout_width="200dp"
        android:layout_height="400dp"
        android:layout_below="@+id/img_saved"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/relative_containrecord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/img_saved"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/record_bg" 
        android:visibility="gone"
        >
        <ImageView 
            android:id="@+id/img_recorded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/tv_voicesaved_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="录音文本"
            android:textColor="#000000" />
         <ImageView
            android:id="@+id/img_albumitem_todetail"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:src="@drawable/png_common_enter" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_containrecord"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/content" />

    <RelativeLayout
        android:id="@+id/relative_replacebottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFAFA" 
        android:visibility="gone"
        >
        
        <ImageView 
            android:id="@+id/img_record_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/luyin"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/tv_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="正在录音" />
        <ImageView 
            android:id="@+id/img_stoprecord"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/redstop"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
        <ImageView 
            android:id="@+id/img_pauserecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pause32"
            android:layout_toLeftOf="@+id/img_stoprecord"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_primarybottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFAFA"
        android:orientation="horizontal" 
        >

        <ImageView
            android:id="@+id/iv_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/photos" />

        <ImageView
            android:id="@+id/iv_add_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/camera" />

        <ImageView
            android:id="@+id/iv_add_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/video" />

        <ImageView
            android:id="@+id/iv_add_voice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/luyin" />
    </LinearLayout>

</RelativeLayout>